# movie-reviews

./: .gitignore
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  auth.js  colors.js  config.js  index.js
client/src/components/: LoginForm.jsx  NavOptions.jsx  NewReviewForm.jsx  ReviewCard.jsx  ReviewIndex.jsx
server/: README.md  app.py  pyproject.toml  runapp.sh
server/app/: config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
server/movie/: model.py  routes.py
