[tool.poetry]
name = "movie_reviews_backend"
version = "0.1.0"
description = "server for the movie reviews site"
authors = ["Anton Kueltz <kueltz.anton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
